[gd_scene load_steps=49 format=2]

[ext_resource path="res://content/gadgets/stunLaser/StunLaser.gd" type="Script" id=1]
[ext_resource path="res://content/gadgets/stunLaser/cannon.png" type="Texture" id=2]
[ext_resource path="res://content/gadgets/stunLaser/stunlaser_sheet.png" type="Texture" id=3]
[ext_resource path="res://content/gadgets/stunLaser/laserend.png" type="Texture" id=4]
[ext_resource path="res://systems/audio/Sound.tscn" type="PackedScene" id=5]
[ext_resource path="res://content/sounds/Weapons/Laser/laser_init_1_add.wav" type="AudioStream" id=6]
[ext_resource path="res://content/sounds/Weapons/Laser/AmbLaser.wav" type="AudioStream" id=7]
[ext_resource path="res://content/sounds/dome1/Terminal01_BattleButton.wav" type="AudioStream" id=8]
[ext_resource path="res://content/sounds/Locations/Stunlaser/Activate.wav" type="AudioStream" id=9]

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 3 )
region = Rect2( 0, 95, 16, 19 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 0, 38, 16, 19 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 16, 38, 16, 19 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 32, 38, 16, 19 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 48, 38, 16, 19 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 3 )
region = Rect2( 0, 57, 16, 19 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 3 )
region = Rect2( 16, 57, 16, 19 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 3 )
region = Rect2( 32, 57, 16, 19 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 3 )
region = Rect2( 48, 57, 16, 19 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 19 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 0, 76, 16, 19 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 0, 114, 16, 19 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 16, 114, 16, 19 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 32, 114, 16, 19 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 48, 114, 16, 19 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 64, 114, 16, 19 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 80, 114, 16, 19 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 96, 114, 16, 19 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 112, 114, 16, 19 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 0, 19, 16, 19 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 16, 19, 16, 19 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 32, 19, 16, 19 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 48, 19, 16, 19 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 64, 19, 16, 19 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 80, 19, 16, 19 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 96, 19, 16, 19 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 112, 19, 16, 19 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 26 ) ],
"loop": false,
"name": "cooldown",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "idle",
"speed": 6.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": true,
"name": "move",
"speed": 10.0
}, {
"frames": [ SubResource( 24 ) ],
"loop": false,
"name": "off",
"speed": 5.0
}, {
"frames": [ SubResource( 25 ) ],
"loop": true,
"name": "shoot",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": false,
"name": "shutdown",
"speed": 10.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": false,
"name": "start",
"speed": 10.0
} ]

[sub_resource type="Gradient" id=40]
offsets = PoolRealArray( 0, 0.105163, 0.73805, 1 )
colors = PoolColorArray( 0.345098, 1, 0.392157, 0, 0.345098, 1, 0.392157, 1, 0.313726, 0.607843, 0.392157, 1, 0.313726, 0.607843, 0.392157, 0 )

[sub_resource type="GradientTexture" id=41]
gradient = SubResource( 40 )

[sub_resource type="ParticlesMaterial" id=39]
lifetime_randomness = 0.3
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 30.0
gravity = Vector3( 0, -5, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 40.0
color_ramp = SubResource( 41 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 9, 7 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 4 )
region = Rect2( 9, 0, 9, 7 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 4 )
region = Rect2( 18, 0, 9, 7 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 4 )
region = Rect2( 27, 0, 9, 7 )

[sub_resource type="SpriteFrames" id=38]
animations = [ {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="Gradient" id=31]
offsets = PoolRealArray( 0, 0.0860421, 0.594646, 0.741874, 0.839388, 1 )
colors = PoolColorArray( 0.156863, 0.376471, 0.392157, 0, 0.156863, 0.376471, 0.392157, 1, 0.219608, 0.6, 0.392157, 1, 0.470588, 0.745098, 0.392157, 1, 0.345098, 1, 0.392157, 1, 0.345098, 1, 0.392157, 0 )

[sub_resource type="GradientTexture" id=32]
gradient = SubResource( 31 )

[sub_resource type="ParticlesMaterial" id=33]
lifetime_randomness = 0.49
emission_shape = 2
emission_box_extents = Vector3( 4, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 15.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 6.0
initial_velocity_random = 0.43
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 1.0
color_ramp = SubResource( 32 )

[node name="StunLaser" type="Node2D" groups=["lostL", "saveable"]]
script = ExtResource( 1 )

[node name="Laser" type="Line2D" parent="."]
position = Vector2( -0.5, 2 )
points = PoolVector2Array( 0.5, -5, 0, -300 )
width = 1.0
default_color = Color( 0.470588, 0.745098, 0.392157, 1 )

[node name="Cannon" type="Sprite" parent="."]
position = Vector2( -1, -15 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 2, 11 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -7 )
frames = SubResource( 1 )
animation = "cooldown"
playing = true

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 0, 8 )
enabled = true
cast_to = Vector2( 0, -600 )
collision_mask = 128
collide_with_areas = true
collide_with_bodies = false

[node name="MoveSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 1, 0 )
max_distance = 200.0
bus = "World"

[node name="HitParticles" type="Particles2D" parent="."]
z_index = 10
amount = 10
lifetime = 0.4
local_coords = false
process_material = SubResource( 39 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, 13 )

[node name="HitEffect" type="AnimatedSprite" parent="."]
visible = false
z_index = 7
frames = SubResource( 38 )
frame = 2
playing = true

[node name="CooldownParticles" type="Particles2D" parent="."]
position = Vector2( 0, -2 )
amount = 20
lifetime = 3.0
local_coords = false
process_material = SubResource( 33 )

[node name="Tween" type="Tween" parent="."]

[node name="FireSound" parent="." instance=ExtResource( 5 )]
volume_db = -3.933
pitch_scale = 1.79
bus = "World"
randomVolume = 0.0
randomPitch = 0.0
streams = [ ExtResource( 7 ) ]

[node name="FireSound2" parent="FireSound" instance=ExtResource( 5 )]
volume_db = -13.11
pitch_scale = 1.43
bus = "World"
randomPitch = 0.0
streams = [ ExtResource( 6 ) ]

[node name="ActivateSound" parent="." instance=ExtResource( 5 )]
volume_db = -2.185
pitch_scale = 1.47
bus = "World"
streams = [ ExtResource( 8 ) ]

[node name="StopSound" parent="." instance=ExtResource( 5 )]
volume_db = -2.185
pitch_scale = 1.35
bus = "World"
streams = [ ExtResource( 9 ) ]

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
